--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "angular": "^1.5.7",
     "bootstrap": "^3.3.6",
-    "jquery": "^3.0.0"
+    "jquery": "^3.0.0",
+    "angular-route": "^1.5.7"
   }
 }
