--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "express-session": "^1.13.0",
+    "jsonwebtoken": "^7.0.1",
     "mongoose": "^4.5.1",
+    "morgan": "^1.7.0",
     "socket.io": "^1.4.6"
   },
   "devDependencies": {
